Media Controls: create popup menu element, base for text track/overflow lists.

This is introducing MediaControlPopupMenuElement as a base class. At
the moment, the class handles positioning of the popup and some basic
visibility. It's also cleaning up a bit of code around popup menus.

This new class will allow the introduction of an event handler to deal
with keyboard events on both popup menus.

Bug: 821131
Change-Id: I19ad4193b5ccbd6acd3c59c35701e32c91e634c6
Reviewed-on: https://chromium-review.googlesource.com/1005334
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549712}
Former-commit-id: 9a14e94e6f176a61e67a662a75cbf83196f32b49