third_party/blink/renderer/modules/media_controls/elements/media_control_overflow_menu_list_element.cc
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/public/platform/task_type.h"
 #include "third_party/blink/renderer/core/dom/events/event.h"
+#include "third_party/blink/renderer/modules/media_controls/elements/media_control_overflow_menu_button_element.h"
 #include "third_party/blink/renderer/modules/media_controls/media_controls_impl.h"
 #include "third_party/blink/renderer/platform/histogram.h"
 
@@ -14,10 +15,9 @@ namespace blink {
 
 MediaControlOverflowMenuListElement::MediaControlOverflowMenuListElement(
     MediaControlsImpl& media_controls)
-    : MediaControlDivElement(media_controls, kMediaOverflowList) {
+    : MediaControlPopupMenuElement(media_controls, kMediaOverflowList) {
   SetShadowPseudoId(
       AtomicString("-internal-media-controls-overflow-menu-list"));
-  SetIsWanted(false);
 }
 
 void MediaControlOverflowMenuListElement::MaybeRecordTimeTaken(
@@ -45,7 +45,7 @@ void MediaControlOverflowMenuListElement::DefaultEventHandler(Event* event) {
 }
 
 void MediaControlOverflowMenuListElement::SetIsWanted(bool wanted) {
-  MediaControlDivElement::SetIsWanted(wanted);
+  MediaControlPopupMenuElement::SetIsWanted(wanted);
 
   // Record the time the overflow menu was shown to a histogram.
   if (wanted) {
@@ -62,6 +62,10 @@ void MediaControlOverflowMenuListElement::SetIsWanted(bool wanted) {
         WTF::Bind(&MediaControlOverflowMenuListElement::MaybeRecordTimeTaken,
                   WrapWeakPersistent(this), kTimeToDismiss));
   }
+}
+
+Element* MediaControlOverflowMenuListElement::PopupAnchor() const {
+  return &GetMediaControls().OverflowButton();
 }
 
 }  // namespace blink
