third_party/blink/renderer/modules/media_controls/elements/media_control_text_track_list_element.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/html/track/text_track.h"
 #include "third_party/blink/renderer/core/html/track/text_track_list.h"
 #include "third_party/blink/renderer/core/input_type_names.h"
+#include "third_party/blink/renderer/modules/media_controls/elements/media_control_toggle_closed_captions_button_element.h"
 #include "third_party/blink/renderer/modules/media_controls/media_controls_impl.h"
 #include "third_party/blink/renderer/platform/event_dispatch_forbidden_scope.h"
 #include "third_party/blink/renderer/platform/text/platform_locale.h"
@@ -50,22 +51,23 @@ bool HasDuplicateLabel(TextTrack* current_track) {
 
 MediaControlTextTrackListElement::MediaControlTextTrackListElement(
     MediaControlsImpl& media_controls)
-    : MediaControlDivElement(media_controls, kMediaTextTrackList) {
+    : MediaControlPopupMenuElement(media_controls, kMediaTextTrackList) {
   SetShadowPseudoId(AtomicString("-internal-media-controls-text-track-list"));
-  SetIsWanted(false);
 }
 
 bool MediaControlTextTrackListElement::WillRespondToMouseClickEvents() {
   return true;
 }
 
-void MediaControlTextTrackListElement::SetVisible(bool visible) {
-  if (visible) {
-    SetIsWanted(true);
+void MediaControlTextTrackListElement::SetIsWanted(bool wanted) {
+  MediaControlPopupMenuElement::SetIsWanted(wanted);
+
+  if (wanted)
     RefreshTextTrackListMenu();
-  } else {
-    SetIsWanted(false);
-  }
+}
+
+Element* MediaControlTextTrackListElement::PopupAnchor() const {
+  return &GetMediaControls().ToggleClosedCaptions();
 }
 
 void MediaControlTextTrackListElement::DefaultEventHandler(Event* event) {
