third_party/blink/renderer/modules/media_controls/elements/media_control_text_track_list_element.h
@@ -6,7 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef THIRD_PARTY_BLINK_RENDERER_MODULES_MEDIA_CONTROLS_ELEMENTS_MEDIA_CONTROL_TEXT_TRACK_LIST_ELEMENT_H_
 #define THIRD_PARTY_BLINK_RENDERER_MODULES_MEDIA_CONTROLS_ELEMENTS_MEDIA_CONTROL_TEXT_TRACK_LIST_ELEMENT_H_
 
-#include "third_party/blink/renderer/modules/media_controls/elements/media_control_div_element.h"
+#include "third_party/blink/renderer/modules/media_controls/elements/media_control_popup_menu_element.h"
 
 namespace blink {
 
@@ -14,15 +14,16 @@ class Event;
 class MediaControlsImpl;
 class TextTrack;
 
-class MediaControlTextTrackListElement final : public MediaControlDivElement {
+class MediaControlTextTrackListElement final
+    : public MediaControlPopupMenuElement {
  public:
   explicit MediaControlTextTrackListElement(MediaControlsImpl&);
 
   // Node interface.
   bool WillRespondToMouseClickEvents() override;
 
-  // Toggle visibility of the list.
-  void SetVisible(bool);
+  void SetIsWanted(bool) final;
+  Element* PopupAnchor() const final;
 
  private:
   void DefaultEventHandler(Event*) override;
