third_party/blink/renderer/modules/media_controls/media_controls_impl.h
@@ -143,6 +143,7 @@ class MODULES_EXPORT MediaControlsImpl final : public HTMLDivElement,
   // Methods used for Download In-product help.
   const MediaControlDownloadButtonElement& DownloadButton() const;
   const MediaControlOverflowMenuButtonElement& OverflowButton() const;
+  MediaControlOverflowMenuButtonElement& OverflowButton();
   void DidDismissDownloadInProductHelp();
   MediaDownloadInProductHelpManager* DownloadInProductHelp();
 
@@ -150,6 +151,7 @@ class MODULES_EXPORT MediaControlsImpl final : public HTMLDivElement,
 
   // Accessors for UI elements.
   const MediaControlCurrentTimeDisplayElement& CurrentTimeDisplay() const;
+  MediaControlToggleClosedCaptionsButtonElement& ToggleClosedCaptions();
 
   virtual void Trace(blink::Visitor*);
 
